2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Revamp mln::topo::is_simple_cell.

	* mln/topo/is_simple_cell.hh
	(mln::topo::is_simple_cell<I, N, NL, NH>::operator()):
	Replace ad hoc code by a call to is_facet.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Have is_facet take into account the values of a (complex) image.

	* mln/topo/is_facet.hh (mln::topo::is_facet): Take a binary image
	and a neighborhood as arguments and take the image's values into
	account.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Revamp topology-related routines.

	* mln/make/attachment.hh,
	* mln/make/cell.hh,
	* mln/make/detachment.hh,
	* mln/topo/detach_cell.hh:
	Do not require the face passed as argument to be a facet.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Make the interface of thinning algorithms uniform w.r.t. functors.

	* mln/topo/skeleton/priority_driven_thinning.hh
	(mln::topo::skeleton::priority_driven_thinning): Catch up
	with mln::topo::skeleton::breadth_first_thinning.
	* mln/topo/detach_point.hh: Turn into a functor to match the new
	interface of thinning algorithms.
	* tests/topo/skeleton/breadth_first_thinning.cc
	* tests/topo/skeleton/breadth_first_thinning_constrained.cc
	* tests/topo/skeleton/priority_driven_thinning.cc
	* tests/topo/skeleton/priority_driven_thinning_constrained.cc:
	Adjust.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	State a cell is not simple if it does not correspond to a facet.

	* mln/topo/is_simple_cell.hh
	(mln::topo::is_simple_cell<I, N, NL, NH>::operator()): Here.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Use mln::data::paste to simplify mesh skeleton applications.

	* apps/mesh-segm-skel/mesh-complex-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	Here.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Update mesh skeleton applications.

	* apps/mesh-segm-skel/mesh-complex-skel.cc,