@@ -1,5 +1,12 @@
 2011-02-24  Roland Levillain  <roland@lrde.epita.fr>
 
+	New complex image alias: mln::bin_2complex_image2d.
+
+	* mln/core/alias/complex_image.hh (mln::bin_2complex_image2d):
+	New typedef.
+
+2011-02-24  Roland Levillain  <roland@lrde.epita.fr>
+
 	Revamp mln::topo::is_simple_cell.
 
 	* mln/topo/is_simple_cell.hh
